--- a/src/css/blocks/nav-pager.scss
+++ b/src/css/blocks/nav-pager.scss
@@ -4,7 +4,6 @@
 	position: relative;
 	display: flex;
 	justify-content: center;
-	margin: 100px 0;
 
 	&__item,
 	&__prev,
