--- a/src/css/blocks/slider-content.scss
+++ b/src/css/blocks/slider-content.scss
@@ -2,7 +2,6 @@
 .slider-content {
 
 	position: relative;
-	margin-bottom: 75px;
 
 	&.--has-wing {
 		.slider-content__ctrl {
