--- a/src/css/blocks/subscribe.scss
+++ b/src/css/blocks/subscribe.scss
@@ -1,8 +1,6 @@
 
 .subscribe {
 
-	margin-top: 160px;
-	margin-bottom: 85px;
 	padding: 45px;
 	background: #eff4fd;
 
